--- a/environment.yaml
+++ b/environment.yaml
@@ -31,7 +31,7 @@ dependencies:
   - blinker=1.6.3
   - bokeh=3.3.4
   - brotli=1.1.0
-  - brotli-bin=1.1.0
+  - brotli-_bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
   - c-ares=1.20.1
