--- a/exp/moe/black-friday/0-tuning.toml
+++ b/exp/moe/black-friday/0-tuning.toml
@@ -28,7 +28,7 @@ weight_decay = ["_tune_", "?loguniform", 0.0, 0.0001, 0.1]
 arch_type = "plain"
 
 [space.model.backbone]
-type = "MoE"
+type = "BMoE"
 n_blocks = ["_tune_", "int", 1, 3]
 d_block = ["_tune_", "int", 128, 2048, 32]
 num_experts = [
@@ -38,8 +38,14 @@ num_experts = [
     40,
     4,
 ]
-gating_type = 'bayesian'
+gating_type = 'standard'
 gating_prior_std = 1.0
 kl_factor = 1e-2
-dropout=0.0
+dropout = [
+    "_tune_",
+    "?uniform",
+    0.0,
+    0.0,
+    0.5,
+]
 device='cuda'
