--- a/exp/moe/churn/0-tuning.toml
+++ b/exp/moe/churn/0-tuning.toml
@@ -38,8 +38,14 @@ num_experts = [
     40,
     4,
 ]
-gating_type = 'bayesian'
+gating_type = 'standard'
 gating_prior_std = 1.0
 kl_factor = 1e-2
-dropout=0.0
+dropout = [
+    "_tune_",
+    "?uniform",
+    0.0,
+    0.0,
+    0.5,
+]
 device='cuda'
