--- a/exp/moe-piecewiselinear/adult/0-tuning.toml
+++ b/exp/moe-piecewiselinear/adult/0-tuning.toml
@@ -15,22 +15,47 @@ amp = true
 
 [space.data]
 cache = true
-path = "data/churn"
+path = "data/adult"
 num_policy = "noisy-quantile"
 cat_policy = "ordinal"
 
 [space.optimizer]
 type = "AdamW"
-lr = ["_tune_", "loguniform", 0.0003, 0.01]
-weight_decay = ["_tune_", "?loguniform", 0.0, 0.0001, 0.1]
+lr = [
+    "_tune_",
+    "loguniform",
+    0.0003,
+    0.01,
+]
+
+weight_decay = [
+    "_tune_",
+    "?loguniform",
+    0.0,
+    0.0001,
+    0.1,
+]
 
 [space.model]
 arch_type = "plain"
 
 [space.model.backbone]
 type = "BMoE"
-n_blocks = ["_tune_", "int", 1, 2]
-d_block = ["_tune_", "int", 128, 2048, 32]
+n_blocks = [
+    "_tune_",
+    "int",
+    1,
+    2,
+]
+
+d_block = [
+    "_tune_",
+    "int",
+    128,
+    2048,
+    32,
+]
+
 num_experts = [
     "_tune_",
     "int",
@@ -38,10 +63,16 @@ num_experts = [
     40,
     4,
 ]
-gating_type = 'bayesian'
+gating_type = 'standard'
 gating_prior_std = 1.0
 kl_factor = 1e-2
-dropout=0.0
+dropout = [
+    "_tune_",
+    "?uniform",
+    0.0,
+    0.0,
+    0.5,
+]
 
 [space.model.num_embeddings]
 type = "PiecewiseLinearEmbeddings"
