--- a/exp/moe-piecewiselinear/house/0-tuning.toml
+++ b/exp/moe-piecewiselinear/house/0-tuning.toml
@@ -15,9 +15,8 @@ amp = true
 
 [space.data]
 cache = true
-path = "data/churn"
+path = "data/house"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [space.optimizer]
 type = "AdamW"
@@ -28,7 +27,7 @@ weight_decay = ["_tune_", "?loguniform", 0.0, 0.0001, 0.1]
 arch_type = "plain"
 
 [space.model.backbone]
-type = "BMoE"
+type = "MoE"
 n_blocks = ["_tune_", "int", 1, 2]
 d_block = ["_tune_", "int", 128, 2048, 32]
 num_experts = [
@@ -38,10 +37,16 @@ num_experts = [
     40,
     4,
 ]
-gating_type = 'bayesian'
+gating_type = 'standard'
 gating_prior_std = 1.0
 kl_factor = 1e-2
-dropout=0.0
+dropout = [
+    "_tune_",
+    "?uniform",
+    0.0,
+    0.0,
+    0.5,
+]
 
 [space.model.num_embeddings]
 type = "PiecewiseLinearEmbeddings"
