--- a/exp/moe-piecewiselinear/california/0-tuning.toml
+++ b/exp/moe-piecewiselinear/california/0-tuning.toml
@@ -1,7 +1,9 @@
 seed = 0
 function = "_bin.model.main"
 n_trials = 100
-sampler = { n_startup_trials = 20 }
+
+[sampler]
+n_startup_trials = 20
 
 [space]
 seed = 0
@@ -18,26 +20,38 @@ num_policy = "noisy-quantile"
 
 [space.optimizer]
 type = "AdamW"
-lr = ["_tune_", "loguniform", 0.0003, 0.01]
-weight_decay = ["_tune_", "?loguniform", 0.0, 0.0001, 0.1]
+lr = [
+    "_tune_",
+    "loguniform",
+    0.0003,
+    0.01,
+]
+weight_decay = [
+    "_tune_",
+    "?loguniform",
+    0.0,
+    0.0001,
+    0.1,
+]
 
 [space.model]
 arch_type = "plain"
 
 [space.model.backbone]
 type = "BMoE"
-n_blocks = ["_tune_", "int", 1, 2]
-d_block = ["_tune_", "int", 128, 2048, 32]
-num_experts = [
+n_blocks = [
     "_tune_",
     "int",
-    4,
-    40,
-    4,
+    1,
+    5,
 ]
-gating_type = 'standard'
-gating_prior_std = 1.0
-kl_factor = 1e-2
+d_block = [
+    "_tune_",
+    "int",
+    128,
+    1280,
+    64,
+]
 dropout = [
     "_tune_",
     "?uniform",
@@ -45,6 +59,16 @@ dropout = [
     0.0,
     0.5,
 ]
+d_block_per_expert = [
+    "_tune_",
+    "int",
+    32,
+    64,
+    32,
+]
+gating_prior_std = 1.0
+kl_factor = 0.01
+gating_type = "standard"
 
 [space.model.num_embeddings]
 type = "PiecewiseLinearEmbeddings"
