--- a/exp/moe-piecewiselinear/higgs-small/0-tuning.toml
+++ b/exp/moe-piecewiselinear/higgs-small/0-tuning.toml
@@ -7,7 +7,7 @@ n_startup_trials = 20
 
 [space]
 seed = 0
-batch_size = 1024
+batch_size = 512
 patience = 16
 n_epochs = -1
 gradient_clipping_norm = 1.0
@@ -15,7 +15,7 @@ amp = true
 
 [space.data]
 cache = true
-path = "data/microsoft"
+path = "data/higgs-small"
 num_policy = "noisy-quantile"
 
 [space.optimizer]
@@ -43,7 +43,7 @@ n_blocks = [
     "_tune_",
     "int",
     1,
-    6,
+    5,
 ]
 d_block = [
     "_tune_",
@@ -69,3 +69,21 @@ d_block_per_expert = [
 gating_prior_std = 1.0
 kl_factor = 0.01
 gating_type = "standard"
+
+[space.model.num_embeddings]
+type = "PiecewiseLinearEmbeddings"
+d_embedding = [
+    "_tune_",
+    "int",
+    8,
+    32,
+    4,
+]
+
+[space.bins]
+n_bins = [
+    "_tune_",
+    "int",
+    2,
+    128,
+]
