--- a/exp/moe/higgs-small/0-tuning.toml
+++ b/exp/moe/higgs-small/0-tuning.toml
@@ -7,7 +7,7 @@ n_startup_trials = 20
 
 [space]
 seed = 0
-batch_size = 1024
+batch_size = 512
 patience = 16
 n_epochs = -1
 gradient_clipping_norm = 1.0
@@ -15,7 +15,7 @@ amp = true
 
 [space.data]
 cache = true
-path = "data/microsoft"
+path = "data/higgs-small"
 num_policy = "noisy-quantile"
 
 [space.optimizer]
