--- a/exp/moe/otto/0-tuning.toml
+++ b/exp/moe/otto/0-tuning.toml
@@ -19,26 +19,38 @@ path = "data/otto"
 
 [space.optimizer]
 type = "AdamW"
-lr = ["_tune_", "loguniform", 0.0003, 0.01]
-weight_decay = ["_tune_", "?loguniform", 0.0, 0.0001, 0.1]
+lr = [
+    "_tune_",
+    "loguniform",
+    0.0003,
+    0.01,
+]
+weight_decay = [
+    "_tune_",
+    "?loguniform",
+    0.0,
+    0.0001,
+    0.1,
+]
 
 [space.model]
 arch_type = "plain"
 
 [space.model.backbone]
 type = "BMoE"
-n_blocks = ["_tune_", "int", 1, 2]
-d_block = ["_tune_", "int", 128, 2048, 32]
-num_experts = [
+n_blocks = [
     "_tune_",
     "int",
-    4,
-    40,
-    4,
+    1,
+    6,
 ]
-gating_type = 'standard'
-gating_prior_std = 1.0
-kl_factor = 1e-2
+d_block = [
+    "_tune_",
+    "int",
+    128,
+    1280,
+    64,
+]
 dropout = [
     "_tune_",
     "?uniform",
@@ -46,3 +58,13 @@ dropout = [
     0.0,
     0.5,
 ]
+d_block_per_expert = [
+    "_tune_",
+    "int",
+    32,
+    64,
+    32,
+]
+gating_prior_std = 1.0
+kl_factor = 0.01
+gating_type = "standard"
