added evalution configs for moe

--- a/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-1-Brazilian_houses/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-1-Brazilian_houses/0-evaluation/0.toml
@@ -13,7 +13,7 @@ cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
+lr = 0.003533491610744748
 weight_decay = 0.0
 
 [model]
@@ -22,9 +22,16 @@ arch_type = "plain"
 [model.backbone]
 type = "BMoE"
 n_blocks = 5
-d_block = 640
+d_block = 704
 dropout = 0.0
-d_block_per_expert = 64
+d_block_per_expert = 32
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
+
+[model.num_embeddings]
+type = "PiecewiseLinearEmbeddings"
+d_embedding = 24
+
+[bins]
+n_bins = 81
