--- a/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-2-Brazilian_houses/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-2-Brazilian_houses/0-evaluation/0.toml
@@ -7,13 +7,13 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/regression-cat-medium-2-Brazilian_houses"
 num_policy = "noisy-quantile"
 cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
+lr = 0.0011014731693014073
 weight_decay = 0.0
 
 [model]
@@ -21,10 +21,17 @@ arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 5
-d_block = 640
+n_blocks = 1
+d_block = 1280
 dropout = 0.0
 d_block_per_expert = 64
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
+
+[model.num_embeddings]
+type = "PiecewiseLinearEmbeddings"
+d_embedding = 8
+
+[bins]
+n_bins = 121
