--- a/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-2-analcatdata_supreme/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe-piecewiselinear/why/regression-cat-medium-2-analcatdata_supreme/0-evaluation/0.toml
@@ -1,5 +1,5 @@
 seed = 0
-batch_size = 256
+batch_size = 64
 patience = 16
 n_epochs = -1
 gradient_clipping_norm = 1.0
@@ -7,14 +7,13 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/regression-cat-medium-2-analcatdata_supreme"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
-weight_decay = 0.0
+lr = 0.0004326598140610326
+weight_decay = 0.033926351440468565
 
 [model]
 arch_type = "plain"
@@ -22,9 +21,16 @@ arch_type = "plain"
 [model.backbone]
 type = "BMoE"
 n_blocks = 5
-d_block = 640
+d_block = 512
 dropout = 0.0
-d_block_per_expert = 64
+d_block_per_expert = 32
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
+
+[model.num_embeddings]
+type = "PiecewiseLinearEmbeddings"
+d_embedding = 24
+
+[bins]
+n_bins = 51
