--- a/exp/results/evaluation_16_04_2024/moe/higgs-small/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/higgs-small/0-evaluation/0.toml
@@ -1,5 +1,5 @@
 seed = 0
-batch_size = 256
+batch_size = 512
 patience = 16
 n_epochs = -1
 gradient_clipping_norm = 1.0
@@ -7,23 +7,22 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/higgs-small"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
-weight_decay = 0.0
+lr = 0.002106093879662335
+weight_decay = 0.0020318981635433064
 
 [model]
 arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 5
-d_block = 640
-dropout = 0.0
+n_blocks = 2
+d_block = 256
+dropout = 0.3954026374319143
 d_block_per_expert = 64
 gating_prior_std = 0.1
 kl_factor = 0.01
