--- a/exp/results/evaluation_16_04_2024/moe/house/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/house/0-evaluation/0.toml
@@ -7,14 +7,13 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/house"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
-weight_decay = 0.0
+lr = 0.0004074342384353588
+weight_decay = 0.000186002292516336
 
 [model]
 arch_type = "plain"
@@ -22,8 +21,8 @@ arch_type = "plain"
 [model.backbone]
 type = "BMoE"
 n_blocks = 5
-d_block = 640
-dropout = 0.0
+d_block = 512
+dropout = 0.05487403015395696
 d_block_per_expert = 64
 gating_prior_std = 0.1
 kl_factor = 0.01
