--- a/exp/results/evaluation_16_04_2024/moe/microsoft/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/microsoft/0-evaluation/0.toml
@@ -1,5 +1,5 @@
 seed = 0
-batch_size = 256
+batch_size = 1024
 patience = 16
 n_epochs = -1
 gradient_clipping_norm = 1.0
@@ -7,13 +7,12 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/microsoft"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
+lr = 0.0005786359379623475
 weight_decay = 0.0
 
 [model]
@@ -21,10 +20,10 @@ arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 5
-d_block = 640
-dropout = 0.0
-d_block_per_expert = 64
+n_blocks = 1
+d_block = 768
+dropout = 0.48675847590170823
+d_block_per_expert = 32
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
