--- a/exp/results/evaluation_16_04_2024/moe/why/regression-cat-medium-0-Brazilian_houses/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/why/regression-cat-medium-0-Brazilian_houses/0-evaluation/0.toml
@@ -13,8 +13,8 @@ cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0024986475200656473
-weight_decay = 0.020182921210288435
+lr = 0.006027701633609098
+weight_decay = 0.0
 
 [model]
 arch_type = "plain"
@@ -22,9 +22,9 @@ arch_type = "plain"
 [model.backbone]
 type = "BMoE"
 n_blocks = 2
-d_block = 640
+d_block = 576
 dropout = 0.0
-d_block_per_expert = 32
+d_block_per_expert = 64
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
