--- a/exp/results/evaluation_16_04_2024/moe/why/regression-num-medium-1-MiamiHousing2016/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/why/regression-num-medium-1-MiamiHousing2016/0-evaluation/0.toml
@@ -7,24 +7,23 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/regression-num-medium-1-MiamiHousing2016"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
-weight_decay = 0.0
+lr = 0.0014895740697592032
+weight_decay = 0.0012436000975154908
 
 [model]
 arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 5
-d_block = 640
-dropout = 0.0
-d_block_per_expert = 64
+n_blocks = 4
+d_block = 576
+dropout = 0.06568306837033382
+d_block_per_expert = 32
 gating_prior_std = 0.1
 kl_factor = 0.01
 gating_type = "standard"
