--- a/exp/results/evaluation_16_04_2024/moe/why/regression-num-medium-1-elevators/0-evaluation/0.toml
+++ b/exp/results/evaluation_16_04_2024/moe/why/regression-num-medium-1-elevators/0-evaluation/0.toml
@@ -7,13 +7,12 @@ amp = true
 
 [data]
 cache = true
-path = "data/regression-cat-medium-1-Brazilian_houses"
+path = "data/regression-num-medium-1-elevators"
 num_policy = "noisy-quantile"
-cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0018699628222328475
+lr = 0.0008545837326575124
 weight_decay = 0.0
 
 [model]
@@ -21,9 +20,9 @@ arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 5
-d_block = 640
-dropout = 0.0
+n_blocks = 1
+d_block = 1088
+dropout = 0.32088414907652224
 d_block_per_expert = 64
 gating_prior_std = 0.1
 kl_factor = 0.01
