--- a/exp/bmoe/otto/0-tuning.toml
+++ b/exp/bmoe/otto/0-tuning.toml
@@ -18,12 +18,19 @@ cache = true
 path = "data/otto"
 
 [space.optimizer]
-type = "Adam"
+type = "AdamW"
 lr = [
     "_tune_",
     "loguniform",
     0.0003,
     0.01,
+]
+weight_decay = [
+    "_tune_",
+    "?loguniform",
+    0.0,
+    0.0001,
+    0.1,
 ]
 
 [space.model]
@@ -44,7 +51,13 @@ d_block = [
     1280,
     64,
 ]
-dropout = 0.0
+dropout = [
+    "_tune_",
+    "?uniform",
+    0.0,
+    0.0,
+    0.5,
+]
 d_block_per_expert = [
     "_tune_",
     "int",
@@ -65,4 +78,10 @@ kl_factor = [
     1.0,
 ]
 default_num_samples = 5
+tau = [
+    "_tune_",
+    "uniform",
+    0.5,
+    2.5,
+]
 gating_type = "bayesian"
