--- a/exp/results/gumbel_evaluation_configs/bmoe/why/regression-cat-large-0-particulate-matter-ukair-2017/0-evaluation/0.toml
+++ b/exp/results/gumbel_evaluation_configs/bmoe/why/regression-cat-large-0-particulate-matter-ukair-2017/0-evaluation/0.toml
@@ -15,23 +15,24 @@ return_average = false
 
 [data]
 cache = true
-path = "data/classif-num-large-0-jannis"
+path = "data/regression-cat-large-0-particulate-matter-ukair-2017"
 num_policy = "noisy-quantile"
+cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0007785452412752401
-weight_decay = 0.0
+lr = 0.000620374240470274
+weight_decay = 0.07232211671668717
 
 [model]
 arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 3
-d_block = 512
-dropout = 0.4053237151619724
-d_block_per_expert = 64
+n_blocks = 2
+d_block = 1216
+dropout = 0.0
+d_block_per_expert = 32
 default_num_samples = 10
-tau = 2.1947313674090383
+tau = 2.6402786276432524
 gating_type = "bayesian"
