--- a/exp/results/gumbel_evaluation_configs/bmoe-piecewiselinear/why/classif-cat-large-0-road-safety/0-evaluation/0.toml
+++ b/exp/results/gumbel_evaluation_configs/bmoe-piecewiselinear/why/classif-cat-large-0-road-safety/0-evaluation/0.toml
@@ -15,12 +15,13 @@ return_average = false
 
 [data]
 cache = true
-path = "data/classif-num-large-0-jannis"
+path = "data/classif-cat-large-0-road-safety"
 num_policy = "noisy-quantile"
+cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0007785452412752401
+lr = 0.0003648913338981285
 weight_decay = 0.0
 
 [model]
@@ -30,8 +31,15 @@ arch_type = "plain"
 type = "BMoE"
 n_blocks = 3
 d_block = 512
-dropout = 0.4053237151619724
+dropout = 0.18849023640015175
 d_block_per_expert = 64
 default_num_samples = 10
-tau = 2.1947313674090383
+tau = 1.7584797013772708
 gating_type = "bayesian"
+
+[model.num_embeddings]
+type = "PiecewiseLinearEmbeddings"
+d_embedding = 24
+
+[bins]
+n_bins = 15
