--- a/exp/results/gumbel_evaluation_configs/bmoe/diamond/0-evaluation/0.toml
+++ b/exp/results/gumbel_evaluation_configs/bmoe/diamond/0-evaluation/0.toml
@@ -15,12 +15,13 @@ return_average = false
 
 [data]
 cache = true
-path = "data/classif-num-large-0-jannis"
+path = "data/diamond"
 num_policy = "noisy-quantile"
+cat_policy = "ordinal"
 
 [optimizer]
 type = "AdamW"
-lr = 0.0007785452412752401
+lr = 0.004719622104312962
 weight_decay = 0.0
 
 [model]
@@ -28,10 +29,10 @@ arch_type = "plain"
 
 [model.backbone]
 type = "BMoE"
-n_blocks = 3
-d_block = 512
-dropout = 0.4053237151619724
-d_block_per_expert = 64
+n_blocks = 5
+d_block = 448
+dropout = 0.0
+d_block_per_expert = 32
 default_num_samples = 10
-tau = 2.1947313674090383
+tau = 1.0243305215201013
 gating_type = "bayesian"
